# ChessAux

./: .clang-format  .gitignore  CMakeLists.txt  Contributing.md  Position  README.md  Untitled Diagram.drawio  main.cpp  mini_interface.cpp  mini_interface_safeguard.cpp  suppressions.txt
.trunk/: trunk.yaml
Librerias/Graphics/: Game.cpp  Game.h  GameObject.cpp  GameObject.h  Map.cpp  Map.h  Moves.cpp  Moves.h  TextureManager.cpp  TextureManager.h
Librerias/Graphics/Game/: Game.cpp  Game.h
Librerias/Graphics/GameObjects/: GameObject.cpp  GameObject.h
Librerias/Graphics/Map/: Map.cpp  Map.h
Librerias/Graphics/Moves/: Moves.cpp  Moves.h
Librerias/Graphics/TextureManager/: TextureManager.cpp  TextureManager.h
Librerias/IA/: IA.cpp  IA.h
Librerias/enums/: enums.cpp  enums.h
Librerias/gameboard/: gameboard.cpp  gameboard.h
Librerias/interface/: interface.cpp  interface.h
Librerias/minMax/: minMax.cpp  minMax.h
Librerias/pieces/: pieces.cpp  pieces.h
docs/: Doxyfile.in
src/Bearing/: Bearing.cpp  Bearing.hpp
src/Game/: Game.hpp
src/Game_settings/: Game_settings.cpp  Game_settings.hpp
src/Gameboard/: Gameboard.cpp  Gameboard.hpp  Gameboard.tcc
src/IA/: IA.cpp  IA.hpp
src/Interface/: Interface.cpp  Interface.hpp  display_gameboard.cpp  game_results_interface.cpp  get_user_key_input.cpp  human_vs_computer_interface.cpp  human_vs_human_interface.cpp  main_interface.cpp  print.hpp  print_title.cpp
src/Map/: Map.cpp  Map.hpp
src/Move/: Move.cpp  Move.hpp
src/Piece/: Piece.cpp  Piece.hpp
src/Piece_set/: Piece_set.hpp
src/Score/: Score.cpp  Score.hpp
src/config/: logging.hpp  logging.hpp.in
src/enums/: enums.cpp  enums.h  enums.hpp
src/gameboard/: gameboard.cpp  gameboard.hpp
